Auto completing elements, variables, or options no longer adds an additonal whitespace after if the text after starts with a whitespace character

--- a/src/styles/elements.module.scss
+++ b/src/styles/elements.module.scss
@@ -236,6 +236,9 @@
 
 .row {
     display: inline-flex;
+    flex-direction: row;
+    & > .line { @extend .line-vertical; }
+    & > .space { @extend .space-vertical; }
 }
 
 .table {
